--- a/app/views/requistions/index.html.erb
+++ b/app/views/requistions/index.html.erb
@@ -30,7 +30,7 @@
 			<th>Тип</th>
 			<th>Поддтип</th>
 			<th>Комментарий</th>
-			<th>Катеория</th>
+			<th>Категория</th>
 			<th>Время последнего изменения</th>
 			<th>Статус</th>
 			<th>Рейтинг</th>
@@ -73,7 +73,7 @@
 			<th>Тип</th>
 			<th>Поддтип</th>
 			<th>Комментарий</th>
-			<th>Катеория</th>
+			<th>Категория</th>
 			<th>Время</th>
 			<th>Статус</th>
 			<th>Рейтинг</th>
