--- a/app/views/users/req.html.erb
+++ b/app/views/users/req.html.erb
@@ -32,7 +32,9 @@
 								 <td> <%= time_ago_in_words(@requistion.created_at) %> назад </td>
 								 <td> через <%= time_ago_in_words(@requistion.time_deadline) %> </td>
 								 <td> <%= link_to "Принять в работу",  {:controller => :requistions, :action => :to_take_in_work, :id => @requistion.id}, {:method => :get, :class=>"btn"} %>
+								 	<%= link_to "Завершить",  {:controller => :requistions, :action => :done, :id => @requistion.id}, {:method => :get, :class=>"btn", data: { confirm: "Завершить заявку?" }} %>
 								 	<%= link_to "Отменить",  {:controller => :requistions, :action => :cancel, :id => @requistion.id}, {:method => :get, :class=>"btn", data: { confirm: "Отменить заявку?" }} %>
+
 								 </td>
 							</tr>
 						<% end %>
