--- a/app/views/requistions/index.html.erb
+++ b/app/views/requistions/index.html.erb
@@ -22,6 +22,7 @@
 <table id="requistions" class="table">
 	<thead>
 		<tr>
+			<th>Номер</th>
 			<th>Объект</th>
 			<th>Адрес прибытия</th>
 			<th>Время подачи</th>
@@ -33,6 +34,7 @@
 			<th>Категория</th>
 			<th>Время последнего изменения</th>
 			<th>Статус</th>
+			<th>Дата окончания</th>
 			<th>Рейтинг</th>
 			<th></th>
 			<th></th>
@@ -42,8 +44,9 @@
     <tbody>
 		<% for requistion in @requistions %>
 		<tr>
+	    	<td><%= requistion.id %></td>
 	    	<td><%= link_to requistion.object,  {:action => :show, :id => requistion.id}, {:method => :get} %></td>
-			<td><%= requistion.building.arrival_address %></td>
+			<td><%= link_to requistion.building.arrival_address, {:controller => :buildings, :action => :show, :id => requistion.building_id}, {:method => :get} %></td>
 			<td><%= requistion.created_at.strftime("%d.%m.%Y %H:%M") %></td>
 			<td><%= requistion.contact_name %></td>			
 			<td><%= requistion.contact_phone %></td>	
@@ -53,6 +56,7 @@
 			<td><%= transcript_of_the_messages_category(requistion.category) %></td>	
 			<td><%= requistion.updated_at.strftime("%e.%m.%Y %H:%M") %></td>
  			<td><%= status_names[requistion.status.to_sym] %></td>
+			<td><%= requistion.time_deadline.strftime("%d.%m.%Y") %></td>
 			<td><%= requistion.raiting %></td>	
 	    	<td>  
 			</td>
@@ -65,6 +69,7 @@
 	</tbody>
 	<tfoot>
 		<tr>
+			<th>Номер</th>
 			<th>Объект</th>
 			<th>Адрес прибытия</th>
 			<th>Время</th>
@@ -76,6 +81,7 @@
 			<th>Категория</th>
 			<th>Время</th>
 			<th>Статус</th>
+			<th>Дата окончания</th>
 			<th>Рейтинг</th>
 			<th></th>
 			<th></th>
