--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -60,7 +60,7 @@ $(document).ready(function(){
 						</li>
 						<li class = "pull-right">
 							<%= link_to buildings_path do %>
-							<span class="glyphicon glyphicon-list"></span>&nbspВсе здания
+							<span class="glyphicon glyphicon-list"></span>&nbspВсе объекты
 							<% end %>
 						</li class = "pull-right">
 						<!-- </ul> -->
