--- a/app/views/requistions/index.html.erb
+++ b/app/views/requistions/index.html.erb
@@ -44,8 +44,8 @@
     <tbody>
 		<% for requistion in @requistions %>
 		<tr>
-	    	<td><%= requistion.id %></td>
-	    	<td><%= link_to requistion.object,  {:action => :show, :id => requistion.id}, {:method => :get} %></td>
+	    	<td><%= link_to requistion.id,  {:action => :show, :id => requistion.id}, {:method => :get} %></td>
+	    	<td><%= link_to requistion.object, {:controller => :buildings, :action => :show, :id => requistion.building_id}, {:method => :get}%></td>
 			<td><%= link_to requistion.building.arrival_address, {:controller => :buildings, :action => :show, :id => requistion.building_id}, {:method => :get} %></td>
 			<td><%= requistion.created_at.strftime("%d.%m.%Y %H:%M") %></td>
 			<td><%= requistion.contact_name %></td>			
