addition_from_new_TR

--- a/app/views/contracts/edit.html.erb
+++ b/app/views/contracts/edit.html.erb
@@ -52,7 +52,19 @@
 					</div>
 				</div>
 			</div>
-
+<!-- 			<div class="row">
+				<div class="form-group">
+					<label class="col-md-3 control-label">Объекты</label>
+					  <div class="col-md-5">
+					  <%= select_tag :building, options_from_collection_for_select(@list_buildings, 'id', 'arrival_address'), :prompt => "Выберите из списка", :class => "form-control", required: "" %>
+					</div>
+				</div>
+				
+					<button id="addbtn" type="button" class="btn btn-default btn-xs">
+						<span class="glyphicon glyphicon-plus"></span>
+					</button>	
+				
+			</div> -->
 
 		<%= f.submit "Принять", class: "btn btn-large btn-primary", id: "submut" %>	
 		<% end %>
