Contract index view, DOM of tables

--- a/app/assets/stylesheets/custom.css.scss.erb
+++ b/app/assets/stylesheets/custom.css.scss.erb
@@ -268,4 +268,11 @@ h1, h3 {
 }
 
 
+.ColVis_Button {
+	position: absolute !important;
 
+}
+.DTTT_button_xls {
+	background-image: none !important;
+	background-color: white !important;
+}
