--- a/app/views/users/reqclient.html.erb
+++ b/app/views/users/reqclient.html.erb
@@ -15,6 +15,7 @@
 							<th><%= "Тип вызова" %></th>
 							<th><%= "Статус" %></th>
 							<th><%= "Время подачи заявки" %></th>
+							<th></th>
 						</tr>
 						</thead>
 						<tbody>
@@ -26,6 +27,64 @@
 								 <td> <%= transcript_of_the_messages(@requistion.type_requistion)+' '+transcript_of_the_messages(@requistion.subtype_requistions) %> </td>
 								 <td> <%= status_names[@requistion.status.to_sym] %> </td>
 								 <td> <%= time_ago_in_words(@requistion.created_at) %> назад </td>
+								 <td><% if current_user.client? and @requistion.status == 'comleted'%> 
+<button class="btn btn-danger mark" data-toggle="modal" data-target="#myModal" >Оценить</button>
+
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title" id="myModalLabel">Ваша Оценка</h4>
+        </div>
+        <div class="modal-body">
+            <%= form_tag(mark_path(@requistion), :html => {:class => "form-vertical"}) do |f| %>
+              <div class="form-group">
+            <label   >Пожалуйста оцените по десятибальной шкале.</label>
+            <input id="mark" name="mark" required >
+          </div>
+          <button type="submit" class="btn btn-success">Оценить</button>
+        <% end %>
+        </div>
+        <div class="modal-footer">
+        </div>
+      </div>
+    </div>
+  </div>
+
+<script type="text/javascript">
+jQuery(document).ready(function () {
+
+$('#mark').rating({'showCaption':true, 
+  "starCaptions": {
+    1: "1 балл", 
+    2: "2 балла", 
+    3: "3 балла",
+    4: "4 балла",
+    5: "5 баллов",
+    6: "6 баллов",
+    7: "7 баллов",
+    8: "8 баллов",
+    9: "9 баллов",
+    10: "10 баллов"},
+  "starCaptionClasses": {
+    1: "text-danger",
+    2: "text-danger",
+    3: "text-warning",
+    4: "text-warning",
+    5: "text-info",
+    6: "text-info",
+    7: "text-primary",
+    8: "text-primary",
+    9: "text-success",
+    10: "text-success"},
+  "clearCaption" : "Нет оценки",
+  "clearButtonTitle":"Очистить",
+  'stars':'10', 'min':'0', 'max':'10', 'step':'1', 'size':'xs', 
+  });
+});
+</script>
+								 <% end %></td>
 							</tr>
 						<% end %>
 						</tbody>
@@ -36,7 +95,7 @@
 								<th></th>
 								<th>Статус</th>
 								<th></th>
-								
+								<th></th>
 							</tr>
 						</tfoot>
 					</table>
