Table in bulding.show

--- a/app/assets/stylesheets/custom.css.scss.erb
+++ b/app/assets/stylesheets/custom.css.scss.erb
@@ -248,6 +248,10 @@ h1, h3 {
 	text-align:center;
 }
 
+.leftH {
+	text-align:left;  
+}
+
 
 /*#requistion_for_workers > tbody > tr:nth-child(n) > th, #requistion_for_workers > tbody > tr:nth-child(n) > td, */
 .table-striped > tbody > tr:nth-child(n) > td, .table-striped > tbody > tr:nth-child(n) > th {
