--- a/app/assets/stylesheets/custom.css.scss.erb
+++ b/app/assets/stylesheets/custom.css.scss.erb
@@ -271,11 +271,14 @@ h1, h3 {
 	background-color: white;
 }
 
+/*
+button.ColVis_Button {
+	@media all and (min-width: 768px) {
+		margin-left: 60px !important;
+		position: absolute !important;
+	}
 
-.ColVis_Button {
-	position: absolute !important;
-
-}
+}*/
 .DTTT_button_xls {
 	background-image: none !important;
 	background-color: white !important;
