--- a/app/views/buildings/index.html.erb
+++ b/app/views/buildings/index.html.erb
@@ -1,9 +1,7 @@
 <% provide(:title, 'Все объекты') %>
 <div class="container">
 	<div class="row">
-		<div class="col-md-2">
-		</div>
-		<div class="col-md-7">
+		<div class="col-xs-12">
 			<h1 style="text-align:center">Все объекты</h1>
 
 			<table id="buildings" class="table table-bordered table-striped">
