--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -23,65 +23,78 @@
 	<div class="col-xs-9">
 
 
-	<table class="table table-bordered table-striped table-condensed">
+	<table class="table table-bordered table-striped table-condensed" id="tablework">
 
 	<!-- <tr>
 	<th>Имя</th>
 	</tr> -->
-  <% @users.each_with_index do |user, index| %>
 
-		
-		<div class="list">
-		<tr>
-			<td>
-				<%= user.id %>
-			</td>
-			<td>
-			<%= link_to user.name, user %>
-			<% if current_user.admin? %>
-				<% div_id = "calendarBut-#{user.id}" -%>
-			</td>
-			<td>
-				<%= user.email %>
-			</td>
-			<td>
-				<%= user.phone %>
-			</td>
-			<td>
-				<button id="<%= div_id -%>" type="button" class="btn btn-default btn-xs calendarButton pull-right">
-					<span class="glyphicon glyphicon-calendar"></span>
-				</button>
-				<div class = "pull-right calendarValue">
+		<thead>
+			<tr>
+				<th>Номер</th>
+				<th>Имя</th>
+				<th>Почта</th>
+				<th>Телефон</th>
+				<th>Посещения</th>
+				<th></th>
+			</tr>
+		</thead>
+		<tbody>
+			<% @users.each_with_index do |user, index| %>
+			<tr>
+				<td>
+					<%= user.id %>
+				</td>
+				<td>
+				<%= link_to user.name, user %>
+				<% if current_user.admin? %>
+					<% div_id = "calendarBut-#{user.id}" -%>
+				</td>
+				<td>
+					<%= user.email %>
+				</td>
+				<td>
+					<%= user.phone %>
+				</td>
+				<td>
 					<%= countOfEntries(user) %>
-				</div>
 
-				<% div_id = "calendar-#{user.id}" -%>
+				</td>
+				<td>
+					<button id="<%= div_id -%>" type="button" class="btn btn-default btn-xs calendarButton pull-right">
+						<span class="glyphicon glyphicon-calendar"></span>
+					</button>
+
+					<% div_id = "calendar-#{user.id}" -%>
 
 
-				<div id="<%= div_id -%>" style="display:none" class="calendar">
-					<% @arrivals = user.arrivals %>
-					<%= calendar_for @arrivals, :first_day_of_week => 1 do |t| %>
-						<%= t.head('Пон', 'Вт', 'Ср', 'Чет', 'Пят', 'Суб', 'Воск') %>
-							<%= t.day do |day, arrivals| %>
-								<%= day.day %>
-							<% end %>
-					<% end %>
-				</div>
-				<div class = "pull-right">
-					<%= link_to user, method: :delete, data: { confirm: "Вы уверены, что хотите удалить?" } do%>
-						<span class="glyphicon glyphicon-trash" title="удалить"></span>
-					<% end %>
-				&nbsp
-					<%= link_to edit_user_path(user) do%>
-						<span class="glyphicon glyphicon-pencil" title="редактировать"></span>
-					<% end %>
-				</div>
+					<div id="<%= div_id -%>" style="display:none" class="calendar">
+						<% @arrivals = user.arrivals %>
+						<%= calendar_for @arrivals, :first_day_of_week => 1 do |t| %>
+							<%= t.head('Пон', 'Вт', 'Ср', 'Чет', 'Пят', 'Суб', 'Воск') %>
+								<%= t.day do |day, arrivals| %>
+									<%= day.day %>
+								<% end %>
+						<% end %>
+					</div>
+					<div class = "pull-right">
+
+						<%= link_to edit_user_path(user) do%>
+							<span class="glyphicon glyphicon-pencil" title="редактировать"></span>
+						<% end %>
+						<%= link_to user, method: :delete, data: { confirm: "Вы уверены, что хотите удалить?" } do%>
+							<span class="glyphicon glyphicon-trash" title="удалить"></span>
+						<% end %>
+					&nbsp
+					</div>
+				<%#= user.arrivals.where(begin_or_end: 0).order(:time).last.time.strftime("%e %B %Y")%>
+				</td>
+			</tr>
 			<% end %>
-			<%#= user.arrivals.where(begin_or_end: 0).order(:time).last.time.strftime("%e %B %Y")%>
-			</td>
-		</tr>
-		</div> 
-	<% end %>  
+			<% end %>  
+
+
+	</tbody>
 </table>
 </div>
 </div>
