--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,9 @@
 <% provide(:title, @user.name) %>
 <div class="container">
 <div class="row">
-	<div class ="col-md-4">
+	<div class ="col-xs-2">
 	</div>
-	<div class = "col-md-4">
+	<div class = "col-xs-4">
 		<section>
 			<h2>
 				<%= @user.name %>
@@ -15,8 +15,17 @@
 				<%= @user.phone %>
 			</h4>
 			<br>
+			<%= link_to controller: "users", action: "contract", id: current_user do %>
+				<div class="btn btn-default">
+					<span class="glyphicon glyphicon-briefcase"></span>&nbspКонтракты
+				</div>
+			<% end %>
+			<br>
+			<br>
+			
 
 			<%= link_to "Изменить данные профиля", edit_user_path(current_user), class:"btn" %>
+
 		</div>
 </div>
 </div>
