--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,7 +1,15 @@
-<tr>
+
   <td>
   <%= link_to user.name, user %>
+  </td>
   <% if current_user.admin? %>
+    <td>
+      <%= user.email %>
+    </td>
+    <td>
+      <%= user.phone %>
+    </td>
+    <td>
     <div class = "pull-right">
         <%= link_to user, method: :delete, data: { confirm: "Вы уверены, что хотите удалить?" } do%>
           <span class="glyphicon glyphicon-trash" title="удалить"></span>
@@ -13,4 +21,3 @@
     </div>
   <% end %>
   </td>
-</tr>
