--- a/app/views/users/reset_password.html.erb
+++ b/app/views/users/reset_password.html.erb
@@ -1,6 +1,6 @@
 <h1>Reset Password</h1>
 
-<%= form_tag password_resets_path, :method => :post do %>
+<%= form_tag reset_password_path, :method => :post do %>
   <div class="field">
     <%= label_tag :email %>
     <%= text_field_tag :email, params[:email] %>
