add_filter_from_address

--- a/app/views/users/contract.html.erb
+++ b/app/views/users/contract.html.erb
@@ -4,7 +4,7 @@
 					<div class = "col-md-2">
 					</div>
 				<div class="col-md-8">
-					<h3>Мои контракты (<%= @user.contracts.count %>)</h3>
+					<h3>Контракты (<%= @user.contracts.count %>)</h3>
 					<table class="table table-bordered table-striped">
 						<tr>
 							<th><%= "Контракт" %></th>
