--- a/app/views/users/reqclient.html.erb
+++ b/app/views/users/reqclient.html.erb
@@ -5,7 +5,7 @@
 <div class = "col-md-2">
 				</div>
 				<div class = "col-md-8">
-					<h3>Мои заявки (<%= @user.pairs.count %>)</h3>
+					<h3>Заявки (<%= @user.pairs.count %>)</h3>
 
 					<table id="requistion_for_clients" class="table">
 						<thead>
