--- a/app/views/requistions/index.html.erb
+++ b/app/views/requistions/index.html.erb
@@ -1,6 +1,7 @@
 <% provide(:title, @name) %>
 <div class="container">
 <h1><%= @name %></h1>
+<%= link_to "Архив", controller: "requistions", action: "index", position: '11', value: 'Завершено' %>
 <script type="text/javascript">
 	old_count = <%= @requistions.fresh.count %>;
 	set = false;
@@ -34,6 +35,7 @@
 			<th>Категория</th>
 			<th>Время последнего изменения</th>
 			<th>Статус</th>
+			<th>Исполнители</th>
 			<th>Дата окончания</th>
 			<th>Рейтинг</th>
 			<th></th>
@@ -57,6 +59,7 @@
 			<td><%= requistion.updated_at.strftime("%e.%m.%Y %H:%M") %>  <button id = <%= requistion.id %> class="btn btn-danger change-time" data-toggle="modal" data-target="#status" onClick="reply_click(this.id)" >Изменения</button>
 </td>
  			<td><%= status_names[requistion.status.to_sym] %></td>
+ 			<td><% requistion.users.where('status = 0').each do |user|%> <li><%= user.name%></li> <% end %></td>
 			<td><%= requistion.time_deadline.strftime("%d.%m.%Y") %></td>
 			<td><%= requistion.raiting %></td>	
 	    	<td>  
@@ -82,6 +85,7 @@
 			<th>Категория</th>
 			<th>Время</th>
 			<th>Статус</th>
+			<th>Исполнители</th>
 			<th>Дата окончания</th>
 			<th>Рейтинг</th>
 			<th></th>
@@ -182,3 +186,5 @@
       </div>
     </div>
   </div>
+
+<%= hidden_field_tag 'for_filter', @object %>
