--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -18,11 +18,11 @@
 			<% end %>
 			<div class="form-group">
 			<label> Новый пароль </label>
-			<%= f.password_field :password, class: "form-control", required: "" %>
+			<%= f.password_field :password, class: "form-control", required: "", minlength:"6" %>
 			</div>
 			<div class="form-group">
 				<label> подтверждение пароля </label>
-				<%= f.password_field :password_confirmation, class: "form-control", required: "" %>
+				<%= f.password_field :password_confirmation, class: "form-control", required: "", minlength:"6" %>
 			</div>
 
 			<%= f.submit "Обновить пароль", class: "btn btn-large btn-primary" %>
