--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,7 +25,34 @@
 			
 
 			<%= link_to "Изменить данные профиля", edit_user_path(current_user), class:"btn" %>
-
+			<button class="btn btn-danger mark" data-toggle="modal" data-target="#myModal" >Изменть пароль</button>
 		</div>
+</div>
+</div>
+
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal-dialog">
+	<div class="modal-content">
+	<div class="modal-header">
+		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+		<h4 class="modal-title" id="myModalLabel">Изменение пароля</h4>
+		</div>
+		<div class="modal-body">
+		<%= form_for(:user, url: change_password_path(@user), html: {:class => "form-vertical center"}) do |f| %>
+			<div class="form-group">
+				<label> Пароль </label>
+				<%= f.password_field :password, class: "form-control", required: "", minlength:"6" %>
+			</div>
+			<div class="form-group">
+				<label> Потверждение пароля </label>
+				<%= f.password_field :password_confirmation, class: "form-control", required: "", minlength:"6" %>
+			</div>
+			<button type="submit" class="btn btn-success">Изменить</button>
+		<% end %>
+		</div>
+	<div class="modal-footer">
+		change_password_path(@user)
+	</div>
+	</div>
 </div>
 </div>
