--- a/app/views/requistions/edit.html.erb
+++ b/app/views/requistions/edit.html.erb
@@ -117,7 +117,7 @@
 			</div>
 
 			<div class="row">
-				<div class="form-group" id="worker_row">
+				<div class="form-group">
 					<%= f.label :'Дата окончания заявки:', class: "col-md-3 control-label" %>
 					<div class="col-md-5">
   						<%= date_field_tag :deadline, nil, :min=> Time.zone.now.strftime("%Y-%m-%d"), :placeholder => "Введите время окончания заявки", class: "form-control", required: ""%>		
@@ -126,7 +126,7 @@
 			</div>
 
 			<div class="row">
-				<div class="form-group" id="worker_row">
+				<div class="form-group">
 					<%= f.label :'Комментарий', class: "col-md-3 control-label" %>
 					<div class="col-md-5">
   						<%= f.text_field :requistion_comment, :placeholder => "Введите время окончания заявки", class: "form-control"%>		
