--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,8 +4,7 @@
 <div class="row">
 	<div class="col-xs-3">
 	</div>
-<<<<<<< HEAD
-	<div class="col-md-4">
+		<div class="col-xs-6">
 		<table id="requistions" class="table">
 			<thead>
 				<tr>
@@ -18,40 +17,9 @@
 		    <tbody>	  	
     			<% @users.each do |user| %>
 					<%= render user %>
+			<%end%>
 			</tbody>
-		<%end%>
-=======
-	<div class="col-xs-6">
-
-
-
-
-		<table class="table table table-bordered table-striped table-condensed" id="tablework">
-			<thead>
-				<th>Номер</th>
-				<th>Имя</th>
-				<th>Почта</th>
-				<th>Телефон</th>
-				<th></th>
-			</thead>
-			<tbody>
-				<tr>
-					<% @users.each_with_index do |user, index| %>
-					 	<td>
-	    					<%= index + 1 %>
-	  					</td>
-							<%= render user %>
-					<%end%>
-				</tr>
-			</tbody>
-	  		<tfoot>
-	  		</tfoot>
->>>>>>> 8647fd5a48f2010e2326b02d61f19184416deca3
 		</table>
-
-
-
-
 
 	</div>
 	<div class="col-xs-4">
@@ -66,66 +34,11 @@
 	<div class="col-xs-9">
 
 
-	<table class="table table-bordered table-striped table-condensed" id="tablework">
+	<table id ="requistions" class="table table-bordered table-striped table-condensed" id="tablework">
 
 	<!-- <tr>
 	<th>Имя</th>
 	</tr> -->
-<<<<<<< HEAD
-  <% @users.each_with_index do |user, index| %>
-
-		<% if index == @users.count / 2 %>
-			</table>
-			</div>
-
-			<div class="col-md-2">
-			</div>
-			<div class="col-md-4">
-			<table class="table tablework">
-
-
-		<% end %>
-		<div class="list">
-		<tr>
-			<td>
-			<%= link_to user.name, user %>
-
-			<% if current_user.admin? %>
-				
-				<% div_id = "calendarBut-#{user.id}" -%>
-
-				<button id="<%= div_id -%>" type="button" class="btn btn-default btn-xs calendarButton pull-right">
-					<span class="glyphicon glyphicon-calendar"></span>
-				</button>
-				<div class = "pull-right calendarValue">
-				<%= countOfEntries(user) %>
-				</div>
-
-				<% div_id = "calendar-#{user.id}" -%>
-
-
-				<div id="<%= div_id -%>" style="display:none" class="calendar">
-				<% @arrivals = user.arrivals %>
-				<%= calendar_for @arrivals, :first_day_of_week => 1 do |t| %>
-				<%= t.head('Пон', 'Вт', 'Ср', 'Чет', 'Пят', 'Суб', 'Воск') %>
-					<%= t.day do |day, arrivals| %>
-						<%= day.day %>
-					<% end %>
-				<% end %>
-				</div>
-				<div class = "pull-right">
-				<%= link_to 'test', controller: :requistions, action: :index, position: 12, value: user.id%>
-
-				<%= link_to user, method: :delete, data: { confirm: "Вы уверены, что хотите удалить?" } do%>
-					<span class="glyphicon glyphicon-trash" title="удалить"></span>
-				<% end %>
-				&nbsp
-				<%= link_to edit_user_path(user) do%>
-					<span class="glyphicon glyphicon-pencil" title="редактировать"></span>
-				<% end %>
-				</div>
-=======
-
 		<thead>
 			<tr>
 				<th>Номер</th>
@@ -175,6 +88,7 @@
 						<% end %>
 					</div>
 					<div class = "pull-right">
+					<%= link_to 'test', controller: :requistions, action: :index, position: 12, value: user.id%>
 
 						<%= link_to edit_user_path(user) do%>
 							<span class="glyphicon glyphicon-pencil" title="редактировать"></span>
@@ -187,7 +101,6 @@
 				<%#= user.arrivals.where(begin_or_end: 0).order(:time).last.time.strftime("%e %B %Y")%>
 				</td>
 			</tr>
->>>>>>> 8647fd5a48f2010e2326b02d61f19184416deca3
 			<% end %>
 			<% end %>  
 
